--- a/P03_marchal_muriel/page_accueil.scss
+++ b/P03_marchal_muriel/page_accueil.scss
@@ -13,19 +13,34 @@ $primary_color : #9356DC ;
 $secondary_color : #FF79DA ; 
 $third_color : #99E2D0 ; 
 
-
+$breakpoints : (mobile : 767px, tablette : 1000px);
 
 * {margin : 0;}
+  
+body {
+  font-size : 15px ;
+  font-family: 'Roboto', sans-serif ;
+  line-height : 12px ; 
+  color : #000000 ;
+}
 
 /*loading spinner*/
 
 body #loading_spinner {
   background-color: #000000 ;
-  background-position: absolute ;
+  width : 100% ; 
+  height : 1345px ; 
+  @media screen and (max-width: map-get($breakpoints, tablette)){
+    height : 1550px ;
+  }
+  @media (max-width: map-get($breakpoints, mobile)) {
+    height : 1770px ;
+  }
+  position: absolute ;
   z-index : 2 ;
-    -moz-animation-duration : 0.2s ;
-    -webkit-animation-duration : 0.2s ;
-  animation-duration : 0.2s ;
+    -moz-animation-duration : 2s ;
+    -webkit-animation-duration : 2s ;
+  animation-duration : 2s ;
     -moz-animation-iteration-count : 1 ;
     -webkit-animation-iteration-count : 1 ;
   animation-iteration-count : 1 ;
@@ -35,24 +50,21 @@ body #loading_spinner {
     -moz-animation-name : loading_spinner ;
     -webkit-animation-name : loading_spinner ;
   animation-name : loading_spinner ;
-    -moz-transition-property : bottom, top ;
-    -webkit-transition-property : bottom, top ;
-  transition-property : bottom, top ;
+    -moz-transition-property : none ;
+    -webkit-transition-property : none ;
+  transition-property : none ;
     -moz-animation-timing-function : ease-in ;
     -webkit-animation-timing-function : ease-in ;
   animation-timing-function : ease-in ;
     -moz-animation-fill-mode : both ;
     -webkit-animation-fill-mode : both ;
   animation-fill-mode : both ;
-    -moz-animation-delay: 2s ;
-    -webkit-animation-delay: 2s ;
-  animation-delay : 2s ;
 
 @keyframes loading_spinner {
   0% {
     opacity : 1 ;
   }
-  90% {
+  95% {
     opacity : 1 ;
   }
   100% {
@@ -88,16 +100,16 @@ body #loading_spinner {
     z-index : 4 ; 
     top: 0;
     left: 0;
-    width: 250px;
-    height: 250px;
+    width: 350px;
+    height: 350px;
     border-radius: 50%;
-    margin : 15% 45% ;
-    @media (min-width : 767px) and (max-width : 1000px) {
+    margin : 10% 45% ;
+    @media screen and (max-width: map-get($breakpoints, tablette)) {
       width : 200px ; 
       height : 200px ; 
       margin : 30% 40%;
     }
-    @media (max-width : 767px) {
+    @media (max-width: map-get($breakpoints, mobile)) {
       width : 164px ; 
       height : 164px ; 
       margin : 30% ; 
@@ -162,23 +174,16 @@ body #loading_spinner {
   }
 }
 
-/*contenu*/
+
 .container {
   width : 1394px ; 
   margin : auto ; 
-  @media (max-width : 767px) {
-    width : 100% ; 
-  }
-  @media (min-width : 767px) and (max-width : 1000px) {
+  @media screen and (max-width: map-get($breakpoints, tablette)) {
     width : 100% ;
   }
-}
-  
-body {
-  font-size : 15px ;
-  font-family: 'Roboto', sans-serif ;
-  line-height : 12px ; 
-  color : #000000 ;
+  @media (max-width: map-get($breakpoints, mobile)) {
+    width : 100% ; 
+  }
 }
 
 /*header*/
@@ -198,16 +203,10 @@ header {
   @include flex-center-column ;
   background-color: #F6F6F6;
   align-items : center ; 
-  width : 50% ;
+  width : 100% ;
   margin : 0 auto ; 
   padding-bottom : 20px ; 
-  @media (min-width : 767px) and (max-width : 1000px) {
-    width : 100% ; 
-  }
-  @media (max-width : 767px) {
-    width : 100% ; 
-  }
- 
+    
   .localisation {
     background-color: #EAEAEA;
     font-size : 18px ; 
@@ -222,55 +221,107 @@ header {
     }
   }
   
-  h1{
+  h1 {
     font-family: 'Roboto', sans-serif ; 
     font-size : 24px ; 
     font-weight : bold ; 
     color : #000000 ; 
-    @media (max-width : 767px) {
-      text-align : center ;
-      line-height : 20px ; 
-      width : 70% ;
-    }
-    @media (min-width : 767px) and (max-width : 1000px) {
+    @media screen and (max-width: map-get($breakpoints, tablette)) {
       text-align: center ;
       line-height: 20px ;
+      width : 70% ;
+    }
+    @media (max-width: map-get($breakpoints, mobile)) {
+      text-align : center ;
+      line-height : 20px ; 
       width : 70% ;
     }
   }
  
   p {
     font-size : 17px ; 
-    @media (max-width : 767px) {
-      width : 70% ; 
-      text-align: center;
-      line-height : 20px ; 
-    }
-    @media (min-width : 767px) and (max-width : 1000px) {
+    @media screen and (max-width: map-get($breakpoints, tablette)) {
       width : 70% ;
       text-align : center ; 
       line-height : 20px ; 
     }
+    @media (max-width: map-get($breakpoints, mobile)) {
+      width : 70% ; 
+      text-align: center;
+      line-height : 20px ; 
+    }
   }
-    
+}  
+
   .explorer {
     color : #ffffff ; 
-    font-weight : bold ; 
+    text-align : center ; 
+      -webkit-background : linear-gradient(to right bottom, $secondary_color, $primary_color) ; 
+      -moz-background : linear-gradient(to right bottom, $secondary_color, $primary_color) ; 
     background : linear-gradient(to right bottom, $secondary_color, $primary_color) ; 
-    box-shadow: 6px 2px 2px #F6F6F6;
+    font-size : 20px ; 
+    width : 270px ; 
+    font-weight : bold ; 
+    border : none ;
+    box-shadow : 3px 3px 3px #e4dede ; 
     border-radius : 30px ; 
-    padding : 10px ; 
-    margin : 30px 0px ; 
-  
-      &:hover {
-        cursor : pointer ; 
-        background: lighten($primary_color, 15%);
-        border-radius : 30px ; 
-        box-shadow : 8px 5px 2px #cec8c89c ; 
-      }
+    padding : 10px 20px ; 
+    margin : 3% 45% ; 
+    position : relative ;
+    @media screen and (max-width: map-get($breakpoints, tablette)) {
+      margin : 4% 45% 8% ; 
+    } 
+    @media (max-width: map-get($breakpoints, mobile)) {
+      margin : 4% 30% 8% ; 
+    }
+    
+    &:hover {
+      cursor : pointer ; 
+    }
+
+    &:hover::before {
+      content: '';
+      position: absolute;
+      top: 0 ;
+      left: 0 ;
+      width : 100% ; 
+      height : 100% ;
+        -webkit-transform : scaleX(1) ; 
+        -moz-transform : scaleX(1) ;
+      transform : scaleX(1) ;
+        -webkit-transform-origin : left ; 
+        -moz-transform-origin : left ;
+      transform-origin : left ;
+    }
+    
+    span {
+      position : relative ; 
+      z-index : 1 ; 
+    }
   }
+
+.explorer::before {
+  content : "" ; 
+  position : absolute ;
+  top : 0 ; 
+  left : 0 ; 
+  width : 100% ; 
+  height : 100% ; 
+  border-radius : 30px ;   
+    background : -webkit-gradient(linear, left bottom, right top,from(lighten($secondary_color, 10%)), to(lighten($primary_color, 10%)));
+    background : -moz-gradient(linear, left bottom, right top, from(lighten($secondary_color, 10%)), to(lighten($primary_color, 10%)));
+  background : gradient(linear, left bottom, right top, from(lighten($secondary_color, 10%)), to(lighten($primary_color, 10%)));
+  box-shadow : 3px 3px 3px darken(#e4dede, 35%) ; 
+    -webkit-transform : scaleX(0) ; 
+    -moz-transform : scaleX(0) ;
+  transform : scaleX(0) ;
+    -webkit-transform-origin : right ; 
+    -moz-transform-origin : right ;
+  transform-origin : right ;
+    -webkit-transition : transform, .1s ; 
+    -moz-transition : transform, .1s ; 
+  transition : transform .1s ; 
 }
- 
   
 /*fonctinnement*/
 #fonctionnement {
@@ -278,12 +329,12 @@ header {
   align-items : center ; 
   margin : auto ; 
   padding-top : 10px ; 
-  @media (max-width : 767px) {
+  @media screen and (max-width: map-get($breakpoints, tablette)) {
     width : 90% ; 
     align-items : flex-start ; 
     margin-top : 15px ; 
   }
-  @media (min-width : 767px) and (max-width : 1000px) {
+  @media (max-width: map-get($breakpoints, mobile)) {
     width : 90% ; 
     align-items : flex-start ; 
     margin-top : 15px ; 
@@ -295,20 +346,31 @@ header {
     font-weight : bold ; 
     color : #000000 ; 
   }
-   
+
+  .fonctionnement {
+    @include flex-center-row ;
+    width : 100% ; 
+    @media screen and (max-width: map-get($breakpoints, tablette)) {
+      @include flex-center-column ;
+    }
+    @media (max-width: map-get($breakpoints, mobile)) {
+      @include flex-center-column ; 
+    }
+  } 
+  
   .categorie { 
     font-weight : bold ;
     display : flex ; 
     flex-direction : row ;
     align-items : center ; 
-    width : 30% ;
-    @media (max-width : 767px) {
+    width : 35% ;
+    @media screen and (max-width: map-get($breakpoints, tablette)) {
       width : 100% ; 
     }
-    @media (min-width : 767px) and (max-width : 1000px) {
+    @media (max-width: map-get($breakpoints, mobile)) {
       width : 100% ; 
     }
-            
+         
     .nombre {
       background-color: $primary_color;
       color : #ffffff ; 
@@ -316,12 +378,12 @@ header {
       padding : 15px ; 
       position : absolute ; 
       z-index : 1 ;
-      margin-left : 3.5% ; 
-      @media (max-width : 767px) {
-        margin-left : 1% ;
-      }
-      @media (min-width : 767px) and (max-width : 1000px) {
+      margin-left : 4% ; 
+      @media screen and (max-width: map-get($breakpoints, tablette)) {
         margin-left : 16% ; 
+      }
+      @media (max-width: map-get($breakpoints, mobile)) {
+        margin-left : 1% ;
       }
     }
   
@@ -337,14 +399,11 @@ header {
       margin : 4% 20% ; 
       padding : 30px ;
       z-index : 0 ;  
-      @media (max-width : 767px) {
+      @media (max-width: map-get($breakpoints, mobile)) {
         width : 80% ;
         margin : 4% ; 
+     
       }
-      &:hover {
-        cursor : pointer ; 
-        background-color: lighten($primary-color, 35%);
-      } 
           
         .fa-mobile-alt, .fa-list-ul, .fa-store {
           color : #333131 ; 
@@ -353,7 +412,12 @@ header {
             color: darken($primary-color, 20%);
           } 
         }
-
+   
+      &:hover {
+        cursor : pointer ; 
+        background-color: lighten($primary-color, 35%);
+      } 
+           
     }
   }
 }
@@ -366,12 +430,15 @@ header {
   align-items : center ; 
   border-radius : 20px ;
   padding : 20px ; 
-  @media (max-width : 767px) {
+  margin-bottom : 15px ; 
+  @media screen and (max-width:1000px) {
+    border-radius : 0px ; 
+    margin-bottom : 0px ; 
+  }
+  @media (max-width: map-get($breakpoints, mobile)) {
     align-items : flex-start ;
     border-radius : 0px ; 
-  }
-  @media (min-width : 767px) and (max-width : 1000px) {
-    border-radius : 0px ; 
+    margin-bottom : 0px ; 
   }
     
   h2 {
@@ -386,17 +453,17 @@ header {
     flex-direction : row ;
     justify-content : space-around ; 
     flex-wrap : wrap ;
-    width : 100% ;    
+    width : 80% ;    
     padding : 10px 0px ; 
-    @media (max-width : 767px) {
+    @media screen and (max-width: map-get($breakpoints, tablette)) {
+      justify-content : space-between ; 
+      width : 70% ; 
+    }
+    @media (max-width: map-get($breakpoints, mobile)) {
       @include flex-center-column ;
       margin : 0 auto ; 
       width : auto ; 
       }
-    @media (min-width : 767px) and (max-width : 1000px) {
-      justify-content : space-between ; 
-      width : 70% ; 
-    }
 
       .restaurant {
         background-color : #ffffff ;
@@ -404,14 +471,19 @@ header {
         flex-wrap : wrap ; 
         flex-direction : column ; 
         border-radius : 20px ;
-        width : 250px ; 
-        height : 180px ;
-        box-shadow : rgba (0,0,0,0.7) ;
-                
-        @media (max-width : 767px) {
+        margin : 10px ;         
+        padding : 5px ; 
+        width : 40% ; 
+        height : 250px ;
+        box-shadow : 2px 2px 3px #f6f6f6 ;
+        @media screen and (max-width: map-get($breakpoints, tablette)) {
+          width : 250px ; 
+          height : 160px ;
           margin : 10px 0px ;
         }
-        @media (min-width : 767px) and (max-width : 1000px) {
+        @media (max-width: map-get($breakpoints, mobile)) {
+          width : 250px ; 
+          height : 160px ;
           margin : 10px 0px ;
         }
         
@@ -421,11 +493,17 @@ header {
      
           .restaurant_photo {  
             object-fit: cover ;
-            width : 96% ;
-            height : 110px;    
+            width : 100% ;
+            height : 180px;    
             border-radius : 20px 20px 0px 0px;
-            padding : 5px ; 
+            position : relative ; 
             z-index : 0 ;
+            @media screen and (max-width: map-get($breakpoints, tablette)) {
+              height : 110px; 
+            }
+            @media (max-width: map-get($breakpoints, mobile)) {
+              height : 110px; 
+            }
           }
   
           .nouveau {
@@ -436,8 +514,14 @@ header {
             position : absolute ; 
             padding : 5px ; 
             z-index : 1 ;
-            margin-left : 167px ; 
+            margin-left : 340px ; 
             margin-top : 17px ; 
+            @media screen and (max-width: map-get($breakpoints, tablette)) {
+              margin-left : 167px ; 
+            }
+            @media (max-width: map-get($breakpoints, mobile)) {
+              margin-left : 167px ; 
+            }
           }
              
           .description {
@@ -469,41 +553,59 @@ header {
 
             i.empty {
               position : absolute ;
-              z-index : 2 ;
-              margin-left : 210px ;
+              z-index : 1 ;
+              margin-left : 380px ;
               font-size : 30px ;
               padding : 5px ; 
               color : #000000 ; 
+              @media screen and (max-width: map-get($breakpoints, tablette)) {
+                margin-left : 210px ; 
+              }
+              @media (max-width: map-get($breakpoints, mobile)) {
+                margin-left : 210px ; 
+              }
               &:hover {
+                cursor : pointer ;
                 display : none ;
                 position : relative ;
-                z-index : 1 ;
+                z-index : 0 ;
               }
             }
 
             i.full {
               position : relative ;
-              z-index : 1 ;
+              z-index : 0 ;
               font-size : 32px ;
               padding : 5px ; 
               color : #ffffff ; 
+              opacity : 0 ; 
               &:hover {
                 cursor : pointer ; 
                 position : absolute ;
-                z-index : 2 ; 
-                margin-left : 209px ; 
+                opacity : 1 ; 
+                z-index : 1 ; 
+                margin-left : 379px ; 
                 margin-top : 0px ; 
+                @media screen and (max-width: map-get($breakpoints, tablette)) {
+                  margin-left : 209px ; 
+                }
+                @media (max-width: map-get($breakpoints, mobile)) {
+                  margin-left : 209px ; 
+                }
                 font-weight : bold ; 
-                background: -webkit-gradient(linear, left bottom, right top, from($secondary_color), to($primary_color));
-	              background-clip: text ;
-	                -webkit-text-fill-color: transparent ; 
+                  background : -webkit-gradient(linear, left bottom, right top, from($secondary_color), to($primary_color));
+                  background : -moz-gradient(linear, left bottom, right top, from($secondary_color), to($primary_color));
+                background : gradient(linear, left bottom, right top, from($secondary_color), to($primary_color));
+                  -webkit-background-clip : text ; 
+                  -moz-background-clip : text ;
+                background-clip : text ;
+	                -webkit-text-fill-color : transparent ; 
                   -moz-text-fill-color : transparent ; 
-                transition : color 1s ease-out ;
-                transition-property: bottom, top ;
+                color : transparent ; 
+                transition: opacity .4s ease-in-out;
               }  
             }
           }
-       
         }
       }     
   }
@@ -522,11 +624,10 @@ footer {
     justify-content : center ; 
     align-items : center ;
     line-height : 35px ; 
-    @media (max-width : 767px) {
+    @media (max-width: map-get($breakpoints, mobile)) {
       width : 97% ;
       align-items : flex-start ; 
       margin-left : 10px ; 
-      overflow-x : hidden; 
     }
     
     h4 {
